[package]
name = "ark-groth16"
version = "0.1.0"
authors = [ "arkworks contributors" ]
description = "An implementation of the Groth 2016 zkSNARK proof system"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/groth16"
documentation = "https://docs.rs/ark-groth16/"
keywords = [ "zero knowledge", "cryptography", "zkSNARK", "SNARK", "Groth-Maller" ]
categories = [ "cryptography" ]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = [ "derive" ] }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }
bench-utils = { git = "https://github.com/arkworks-rs/utils" }
ark-relations = { git = "https://github.com/arkworks-rs/snark", default-features = false }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives.git", branch = "main", default-features = false }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std", default-features = false, optional = true }

tracing = { version = "0.1", default-features = false, features = [ "attributes" ], optional = true }
derivative = { version = "2.0", features = ["use_core"], optional = true}

rand = { version = "0.7", default-features = false }
rayon = { version = "1", optional = true }

[dev-dependencies]
csv = { version = "1" }
ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }
ark-cp6-782 = { git = "https://github.com/arkworks-rs/curves", default-features = false }
ark-mnt4-298 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["r1cs", "curve"] }
ark-mnt6-298 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["r1cs"] }

[features]
default = ["parallel"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-relations/std", "ark-crypto-primitives/std", "ark-std/std" ]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel", "ark-crypto-primitives/parallel", "ark-std/parallel", "rayon"]
r1cs = [ "ark-crypto-primitives/r1cs", "ark-r1cs-std", "tracing", "derivative" ]
print-trace = [ "bench-utils/print-trace" ]

[[example]]
name = "groth16"
path = "examples/snark-scalability/groth16.rs"
required-features = ["std"]

# [[example]]
# name = "groth16-recursive"
# path = "examples/recursive-snark/groth16.rs"
# required-features = ["std"]
